# Cr-ez-une-API-s-curis-e-RESTful-en-utilisant-Django-REST

./: README.md
django-api/: pyproject.toml
django-api/softdesk/: db.sqlite3
django-api/softdesk/api/: admin.py  models.py  serializers.py  views.py
django-api/softdesk/api/migrations/: 0001_initial.py  0002_projects_created_time_issues.py  0003_comments.py  0004_comments_author_id_comments_created_time_and_more.py  0005_alter_comments_author_id.py  0006_alter_projects_project_type.py  0007_projects_contributors_alter_contributors_projects_id_and_more.py
django-api/softdesk/authentication/: admin.py  models.py  permissions.py  serializers.py  views.py
django-api/softdesk/authentication/migrations/: 0001_initial.py  0002_user_can_be_contacted_user_can_data_be_shared_and_more.py  0003_alter_user_birthdate.py  0004_alter_user_birthdate.py
django-api/softdesk/softdesk/: settings.py  urls.py
