[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["VHSR3KorD3R <vhs_rekorder@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
